--- a/index.html
+++ b/index.html
@@ -1,14 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Network</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+
 </head>
+
 <body>
-    
-    
+    <section class="flexible-container">
+        <div class="half-width">
+            <h1><span class="orange-text-color">Skip</span> The Diet,<br> Just Eat Healthy<br> With Food Network</h1>
+            <p>Imagine you don't need a diet because we provide
+                healthy and delicious food for you!</p>
+            <a class="style-button" target="_blank" href="#">Order Food</a>
+        </div>
+
+        <div class="half-width">
+            <img src="images/female/Group 8425.png" alt="">
+        </div>
+    </section>
+
+
+    <section class="flexible-container secton-aboutMe">
+        <div class="half-width">
+            <img src="images/female/Person Image.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>About Me</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing
+                elit. Condimentum diam orci pretium a pharetra,
+                feugiat cursus. Dictumst risus, sem egestas odio cras
+                adipiscing vulputate. Nisi, risus in suscipit non. Non
+                commodo volutpat, pharetra, vel
+            </p>
+            <a class="style-button" target="_blank" href="#">Contact Me</a>
+        </div>
+    </section>
+
+    <section>
+        <h1>My Recipies</h1>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+            industry's standard dummy text ever since the 1500s.</p>
+
+        <div class="flexible-container">
+
+            <div class="Recipe">
+                <img src="images/food/Project Cover.jpg" alt="">
+                <h1>Recipe Title</h1>
+                <p>Lorem ipsum dolor sit amet,consectetur adipiscing elit.Lacus, fermentum amet faucibus sed id nisi
+                    lectus at.</p>
+            </div>
+
+            <div class="Recipe">
+                <img src="images/food/Project Cover1.jpg" alt="">
+                <h1>Recipe Title</h1>
+                <p>Lorem ipsum dolor sit amet,consectetur adipiscing elit.Lacus, fermentum amet faucibus sed id nisi
+                    lectus at.</p>
+            </div>
+
+            <div class="Recipe">
+                <img src="images/food/Project Cover2.png" alt="">
+                <h1>Recipe Title</h1>
+                <p>Lorem ipsum dolor sit amet,consectetur adipiscing elit.Lacus, fermentum amet faucibus sed id nisi
+                    lectus at.</p>
+            </div>
+
+        </div>
+    </section>
+
+    <footer>
+        <h1><span class="orange-text-color">Food</span> Network</h1>
+        <h3>Eat healthy to live healthy. Live healthy to live happy.</h3>
+    </footer>
+
+
+
 </body>
+
 </html>
