--- a/index.html
+++ b/index.html
@@ -8,16 +8,32 @@
     <title>Food Network</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Otomanopee+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 
 </head>
 
 <body>
+
+    <section class="flexible-container top-bar-section">
+        <div class="half-width_top-bar">
+            <h1 style="text-align: center;">Welcome to Food Network</h1>
+            <a class="link-button" target="_blank" href="#">Home</a>
+            <a class="link-button" target="_blank" href="#">Menu</a>
+            <a class="link-button" target="_blank" href="#">Profile</a>
+            <a class="link-button" target="_blank" href="#">Cart</a>
+            <a class="link-button" target="_blank" href="#">Contact With us</a>
+        </div>
+        <div class="half-width_top-bar">
+            <img src="images/food/Project Cover5.png" alt="">
+        </div>
+    </section>
+
+
     <section class="flexible-container">
         <div class="half-width">
             <h1><span class="orange-text-color">Skip</span> The Diet,<br> Just Eat Healthy<br> With Food Network</h1>
-            <p>Imagine you don't need a diet because we provide
+            <p class="paragraph">Imagine you don't need a diet because we provide
                 healthy and delicious food for you!</p>
             <a class="style-button" target="_blank" href="#">Order Food</a>
         </div>
@@ -28,57 +44,90 @@
     </section>
 
 
-    <section class="flexible-container secton-aboutMe">
+    <section class="flexible-container secton-aboutUs">
         <div class="half-width">
             <img src="images/female/Person Image.png" alt="">
         </div>
         <div class="half-width">
-            <h1>About Me</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing
-                elit. Condimentum diam orci pretium a pharetra,
-                feugiat cursus. Dictumst risus, sem egestas odio cras
-                adipiscing vulputate. Nisi, risus in suscipit non. Non
-                commodo volutpat, pharetra, vel
-            </p>
+            <h1>About Us</h1>
+            <p class="paragraph">Our motive is to serve you the best. We try to gather all delecious food of this town in our store so that you can find all in one. We ensure you the best food quality. You can give us your suggestion any time for our better service. Stay connected with us. Thank you.</p>
             <a class="style-button" target="_blank" href="#">Contact Me</a>
         </div>
     </section>
 
     <section>
-        <h1>My Recipies</h1>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-            industry's standard dummy text ever since the 1500s.</p>
+        <div>
+            <h1>Our Recipies</h1>
+            <p class="paragraph">This is the largest food ordering website in the town! We are offering thousands plush delecious dishes with the best price.</p>
+        </div>
 
         <div class="flexible-container">
 
-            <div class="Recipe">
-                <img src="images/food/Project Cover.jpg" alt="">
-                <h1>Recipe Title</h1>
-                <p>Lorem ipsum dolor sit amet,consectetur adipiscing elit.Lacus, fermentum amet faucibus sed id nisi
-                    lectus at.</p>
+            <div class="Recipes">
+                <img src="images/food/P Cover.png" alt="">
+                <b class="paragraph-receipe">Special Thai Soup</b>
+                <p class="paragraph-receipe">This is the special thai soup. It is one of the most populer and highly recommended soup. It contains chickhen, lemon grass, mushroom, corn and many more things.</p>
             </div>
 
-            <div class="Recipe">
+            <div class="Recipes">
+                <img src="images/food/Project Cover8.png" alt="">
+                <b class="paragraph-receipe">Special Salad</b>
+                <p class="paragraph-receipe">This is one of our special salad. It is one of the most populer and highly recommended salad. It's healthy & delecious.</p>
+            </div>
+
+            <div class="Recipes">
                 <img src="images/food/Project Cover1.jpg" alt="">
-                <h1>Recipe Title</h1>
-                <p>Lorem ipsum dolor sit amet,consectetur adipiscing elit.Lacus, fermentum amet faucibus sed id nisi
-                    lectus at.</p>
-            </div>
-
-            <div class="Recipe">
-                <img src="images/food/Project Cover2.png" alt="">
-                <h1>Recipe Title</h1>
-                <p>Lorem ipsum dolor sit amet,consectetur adipiscing elit.Lacus, fermentum amet faucibus sed id nisi
-                    lectus at.</p>
+                <b class="paragraph-receipe">Beef Steak</b>
+                <p class="paragraph-receipe">This is one of our special beef steak. It is one of the most populer and highly recommended steak. It's served with letuce, onion, garlic and special sauce. It's too much delecious.</p>
             </div>
 
         </div>
     </section>
 
+    <section>
+        <div class="flexible-container social-media">
+
+            <div>
+                <b>700k</b>
+                <p>Youtube Subscribers</p>
+            </div>
+
+            <div>
+                <b>2.4</b>
+                <p>Instagram Followerss</p>
+            </div>
+
+            <div>
+                <b>100k</b>
+                <p>Dribbble Shot Likes</p>
+            </div>
+
+        </div>
+    </section>
+
+    <section class="flexible-container secton-aboutMe">
+        <div class="half-width">
+            <img src="images/female/Person Image.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Download Our App Now</h1>
+            <p class="paragraph">Download our mobile app to get discount updates & win gift voucher.<br> Stay with us to
+                get delecious food.
+            </p>
+            <a class="style-button" target="_blank" href="#">Google Play</a>
+            <a class="style-button" target="_blank" href="#">App Store</a>
+        </div>
+    </section>
+
     <footer>
-        <h1><span class="orange-text-color">Food</span> Network</h1>
-        <h3>Eat healthy to live healthy. Live healthy to live happy.</h3>
-    </footer>
+        <div>
+            <h1><span class="orange-text-color">Food</span> Network</h1>
+            <p style="text-align: center;">Eat healthy to live healthy. Live healthy to live happy.</p>
+        </div>
+
+        <footer>
+
+
 
 
 
