--- a/index.html
+++ b/index.html
@@ -50,15 +50,18 @@
         </div>
         <div class="half-width">
             <h1>About Us</h1>
-            <p class="paragraph">Our motive is to serve you the best. We try to gather all delecious food of this town in our store so that you can find all in one. We ensure you the best food quality. You can give us your suggestion any time for our better service. Stay connected with us. Thank you.</p>
-            <a class="style-button" target="_blank" href="#">Contact Me</a>
+            <p class="paragraph">Our motive is to serve you the best. We try to gather all delecious food of this town
+                in our store so that you can find all in one. We ensure you the best food quality. You can give us your
+                suggestion any time for our better service. Stay connected with us. Thank you.</p>
+            <a class="style-button" target="_blank" href="#">Contact Us</a>
         </div>
     </section>
 
     <section>
         <div>
             <h1>Our Recipies</h1>
-            <p class="paragraph">This is the largest food ordering website in the town! We are offering thousands plush delecious dishes with the best price.</p>
+            <h3>This is the largest food ordering website in the town! We are offering you thousands plus delecious
+                dishes with the best price. Choose your favourtie food and order it now.</h3>
         </div>
 
         <div class="flexible-container">
@@ -66,19 +69,23 @@
             <div class="Recipes">
                 <img src="images/food/P Cover.png" alt="">
                 <b class="paragraph-receipe">Special Thai Soup</b>
-                <p class="paragraph-receipe">This is the special thai soup. It is one of the most populer and highly recommended soup. It contains chickhen, lemon grass, mushroom, corn and many more things.</p>
+                <p class="paragraph-receipe">This is the special thai soup. It is one of the most populer and highly
+                    recommended soup. It contains chickhen, lemon grass, mushroom, corn and many more things.</p>
             </div>
 
             <div class="Recipes">
                 <img src="images/food/Project Cover8.png" alt="">
                 <b class="paragraph-receipe">Special Salad</b>
-                <p class="paragraph-receipe">This is one of our special salad. It is one of the most populer and highly recommended salad. It's healthy & delecious.</p>
+                <p class="paragraph-receipe">This is one of our special salad. It is one of the most populer and highly
+                    recommended salad. It's healthy & delecious.</p>
             </div>
 
             <div class="Recipes">
                 <img src="images/food/Project Cover1.jpg" alt="">
                 <b class="paragraph-receipe">Beef Steak</b>
-                <p class="paragraph-receipe">This is one of our special beef steak. It is one of the most populer and highly recommended steak. It's served with letuce, onion, garlic and special sauce. It's too much delecious.</p>
+                <p class="paragraph-receipe">This is one of our special beef steak. It is one of the most populer and
+                    highly recommended steak. It's served with letuce, onion, garlic and special sauce. It's too much
+                    delecious.</p>
             </div>
 
         </div>
@@ -87,35 +94,36 @@
     <section>
         <div class="flexible-container social-media">
 
-            <div>
-                <b>700k</b>
+            <div class="width">
+                <b>700K</b>
                 <p>Youtube Subscribers</p>
             </div>
 
-            <div>
-                <b>2.4</b>
+            <div class="width">
+                <b>2.4M</b>
                 <p>Instagram Followerss</p>
             </div>
 
-            <div>
-                <b>100k</b>
+            <div class="width">
+                <b>100K</b>
                 <p>Dribbble Shot Likes</p>
             </div>
 
         </div>
     </section>
 
-    <section class="flexible-container secton-aboutMe">
+    <section class="flexible-container app-link">
         <div class="half-width">
-            <img src="images/female/Person Image.png" alt="">
+            <img src="images/female/kisspng-eating-junk-food-hunger-fast-food-woman-eating-5b100f5d437345.6346499515277791652763-removebg-preview.png"
+                alt="">
         </div>
-        <div class="half-width">
+        <div style="margin-bottom: 40px;" class="half-width">
             <h1>Download Our App Now</h1>
             <p class="paragraph">Download our mobile app to get discount updates & win gift voucher.<br> Stay with us to
                 get delecious food.
             </p>
-            <a class="style-button" target="_blank" href="#">Google Play</a>
-            <a class="style-button" target="_blank" href="#">App Store</a>
+            <a class="style-button" target="_blank" href="https://play.google.com/store/apps">Google Play</a>
+            <a class="style-button" target="_blank" href="https://www.apple.com/app-store/">App Store</a>
         </div>
     </section>
 
